--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="main">
         <div>
             <h2 class="display-1">Hello ! I'm Omar Hazem <br><span>I'm Software Developer</span></h2>
-            <h3>I Build Amazing Programs & Websites !</h3>
+            <h3>I Built Amazing Programs & Websites !</h3>
             <a href="#projects" class="main-btn">View My Work</a>
         </div>
         <div class="social-icons">
